Application Constants Refactoring (#1086) (#1100)
Signed-off-by: Aleksandr Muravja <aleks@kyberorg.pm>

Signed-off-by: Aleksandr Muravja <aleks@kyberorg.pm>